--- a/styles/_fonts.scss
+++ b/styles/_fonts.scss
@@ -1,3 +1,2 @@
-// FONT EMBEDDING & TYPO VARIABLES
-$body-font: Times, "Times New Roman", Sans-Serif;
+$body-font: Arial, Helvetica, Sans-Serif;
 $headline-font: Arial, Helvetica, Sans-Serif;
