--- a/app/error.module.scss
+++ b/app/error.module.scss
@@ -1,8 +1,11 @@
-.container {
+.error {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
   height: 100vh;
   width: 100vw;
-  flex-direction: column;
+
+  font-size: 20px;
+  font-weight: bold;
 }
