--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -22,6 +22,7 @@ body {
 	-webkit-font-smoothing: antialiased;
 	font-feature-settings: "liga", "kern";
 	overflow-x: hidden;
+	padding: 20px;
 }
 
 html {
