--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -1,8 +1,8 @@
-.container {
-  display: flex;
-  flex-direction: column;
+.post {
+  margin-bottom: 2em;
+}
 
-  ul {
-    list-style: none;
-  }
+.small {
+  font-size: 0.7em;
+  margin-bottom: 1em;
 }
