--- a/components/nav/NavBar.module.scss
+++ b/components/nav/NavBar.module.scss
@@ -3,5 +3,6 @@
   flex-direction: row;
   list-style: none;
   width: 100%;
-  margin-bottom: 20px;
+  background-color: lightblue;
+  padding: calc(var(--outer-margin) / 2);
 }
