--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -22,7 +22,6 @@ body {
 	-webkit-font-smoothing: antialiased;
 	font-feature-settings: "liga", "kern";
 	overflow-x: hidden;
-	padding: 20px;
 }
 
 html {
@@ -32,6 +31,10 @@ html {
 html,
 body {
 	//height: 100%;
+}
+
+main {
+	padding: var(--outer-margin);
 }
 
 ::-webkit-scrollbar {
