--- a/styles/_typography.scss
+++ b/styles/_typography.scss
@@ -39,7 +39,8 @@ h2 {
 h3 {
   font-size: 0.85rem;
   font-family: $headline-font;
-  padding-bottom: 1em;
+  margin-bottom: 0;
+  padding-bottom: 0;
 }
 
 p {
