--- a/app/loading.module.scss
+++ b/app/loading.module.scss
@@ -3,11 +3,24 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  height: 100vh;
-  width: 100vw;
-  font-size: 20px;
-  font-weight: bold;
   position: fixed;
+  z-index: 9999;
   top: 0;
-  left: 0;
+  right: 0;
+  height: var(--navbar-height);
+  margin-right: var(--outer-margin);
+
+  svg {
+    animation: rotate 0.3s linear infinite;
+
+    path {
+      fill: var(--black);
+    }
+
+    @keyframes rotate {
+      100% {
+        transform: rotate(360deg);
+      }
+    }
+  }
 }
