--- a/styles/_mediaqueries.scss
+++ b/styles/_mediaqueries.scss
@@ -1,3 +1,7 @@
+@use "sass:list";
+@use "sass:map";
+@use "sass:meta";
+@use "sass:string";
 @use "sass:math";
 @charset "UTF-8"; // Fixes an issue where Ruby locale is not set properly
 // See https://github.com/sass-mq/sass-mq/pull/10
@@ -88,10 +92,10 @@ $mq-media-type: all !default;
 /// @requires $mq-base-font-size
 /// @returns {Number}
 @function mq-px2em($px, $base-font-size: $mq-base-font-size) {
-  @if unitless($px) {
+  @if math.is-unitless($px) {
     @warn "Assuming #{$px} to be in pixels, attempting to convert it into pixels.";
     @return mq-px2em($px * 1px, $base-font-size);
-  } @else if unit($px) == em {
+  } @else if math.unit($px) == em {
     @return $px;
   }
   @return math.div($px, $base-font-size) * 1em;
@@ -109,8 +113,8 @@ $mq-media-type: all !default;
 ///
 /// @returns {Number} Value in pixels
 @function mq-get-breakpoint-width($name, $breakpoints: $mq-breakpoints) {
-  @if map-has-key($breakpoints, $name) {
-    @return map-get($breakpoints, $name);
+  @if map.has-key($breakpoints, $name) {
+    @return map.get($breakpoints, $name);
   } @else {
     @warn "Breakpoint #{$name} wasn't found in $breakpoints.";
   }
@@ -178,7 +182,7 @@ $mq-media-type: all !default;
 
   // From: this breakpoint (inclusive)
   @if $from {
-    @if type-of($from) == number {
+    @if meta.type-of($from) == number {
       $min-width: mq-px2em($from);
     } @else {
       $min-width: mq-px2em(mq-get-breakpoint-width($from, $breakpoints));
@@ -187,7 +191,7 @@ $mq-media-type: all !default;
 
   // Until: that breakpoint (exclusive)
   @if $until {
-    @if type-of($until) == number {
+    @if meta.type-of($until) == number {
       $max-width: mq-px2em($until);
     } @else {
       $max-width: mq-px2em(mq-get-breakpoint-width($until, $breakpoints)) - 0.01em;
@@ -221,7 +225,7 @@ $mq-media-type: all !default;
     // Remove unnecessary media query prefix 'all and '
     @if ($media-type == "all" and $media-query != "") {
       $media-type: "";
-      $media-query: str-slice(unquote($media-query), 6);
+      $media-query: string.slice(string.unquote($media-query), 6);
     }
 
     @media #{$media-type + $media-query} {
@@ -244,7 +248,7 @@ $mq-media-type: all !default;
   $new-breakpoint: (
     $name: $width,
   );
-  $mq-breakpoints: map-merge($mq-breakpoints, $new-breakpoint) !global;
+  $mq-breakpoints: map.merge($mq-breakpoints, $new-breakpoint) !global;
 }
 
 /// Show the active breakpoint in the top right corner of the viewport
@@ -286,6 +290,6 @@ $mq-media-type: all !default;
   }
 }
 
-@if length($mq-show-breakpoints) > 0 {
+@if list.length($mq-show-breakpoints) > 0 {
   @include mq-show-breakpoints;
 }
