--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -10,6 +10,9 @@
 	--background: var(--white);
 	--foreground: var(--black);
 
+	--body-font: Arial, Helvetica, Sans-Serif;
+	--headline-font: Arial, Helvetica, Sans-Serif;
+
 	@include mediaqueries.mq($from: tablet) {}
 
 	@include mediaqueries.mq($until: tablet) {}
@@ -21,18 +24,17 @@ body {
 	line-height: 1em;
 	color: var(--foreground);
 	background-color: var(--background);
-	font-family: fonts.$body-font;
+	font-family: var(--body-font);
 	-webkit-font-smoothing: antialiased;
 	font-feature-settings: "liga", "kern";
+
+	@include mediaqueries.mq($from: desktop) {
+		background-color: pink;
+	}
 }
 
 html {
 	box-sizing: border-box;
-}
-
-html,
-body {
-	//height: 100%;
 }
 
 main {
@@ -67,9 +69,6 @@ a {
 	text-decoration: none;
 	color: var(--foreground);
 
-	&:hover {}
-
-	&:visited {}
 }
 
 article p a {
@@ -98,7 +97,6 @@ button {
 		@include mediaqueries.mq($from: tablet) {}
 	}
 
-	&:hover {}
 }
 
 figcaption {
@@ -111,14 +109,12 @@ hr {}
 
 input,
 textarea,
-select {
-
-	&:focus {}
-}
+select {}
 
 select {
 	-webkit-appearance: none;
 	-moz-appearance: none;
+	appearance: none;
 	background-image: url("data:image/svg+xml;utf8,<svg fill='black' height='24' viewBox='0 0 24 24' width='24' xmlns='http://www.w3.org/2000/svg'><path d='M7 10l5 5 5-5z'/><path d='M0 0h24v24H0z' fill='none'/></svg>");
 	background-repeat: no-repeat;
 	background-position-x: calc(100% - 1em);
