--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -2,7 +2,7 @@
   display: block;
   margin-bottom: 2em;
 
-  @include mixins.mq($from: desktop) {
+  @include mq($from: desktop) {
     background-color: red;
   }
 }
