--- a/styles/_typography.scss
+++ b/styles/_typography.scss
@@ -1,157 +1,212 @@
-@use "fonts";
-@use "mediaqueries";
+@use 'mediaqueries' as *;
 
 html,
 body {
-  font-size: 15px;
-  font-weight: normal;
+	font-size: 16px;
+	font-weight: normal;
+	font-family: var(--body-font);
+	line-height: 1em;
 
-  @include mediaqueries.mq($from: tablet) {
-    font-size: 20px;
-  }
+	@include mq($from: tablet) {
+		font-size: 18px;
+	}
 
-  @include mediaqueries.mq($from: wide) {
-    font-size: 24px;
-  }
+	@include mq($from: wide) {
+		font-size: 20px;
+	}
 }
 
 h1,
 h2,
 h3,
-h4,
-h5 {
-  strong {
-    //font-weight: normal;
-  }
+h4 {
+	font-weight: normal;
+	line-height: 1;
 }
 
-h1 {
-  font-size: 1.1rem;
-  font-weight: bold;
-  padding-bottom: var(--space);
-  line-height: 1.25;
-  font-family: var(--headline-font);
-
-}
-
+h1,
 h2 {
-  font-size: 0.75rem;
-  font-family: var(--headline-font);
+	font-size: 2.2rem;
+	margin-bottom: 0.25em;
+	line-height: 0.95em;
+
+	@include mq($from: desktop) {
+		font-size: 3.5rem;
+		margin-bottom: 0.5em;
+	}
+}
+
+h1.veryBig,
+h2.veryBig,
+h3.veryBig,
+.very-big {
+	font-size: 2.5rem !important;
+	margin-bottom: 0.3em !important;
+	text-align: justify;
+	text-align-last: justify;
+	font-family: var(--body-font) !important;
+	line-height: 0.95em;
+
+	@include mq($from: desktop) {
+		font-size: 4.3rem !important;
+	}
+}
+
+.about .very-big {
+	margin-bottom: -0.45em !important;
+
+	& + p {
+		margin-top: 3.5rem !important;
+	}
+}
+
+h2,
+.about h1 {
+	width: 100%;
+	text-align: justify;
+	//text-align-last: justify;
+}
+
+.about h1,
+.about h2 {
+	margin-bottom: 0.6rem;
+	padding-top: 1rem;
+
+	@include mq($from: desktop) {
+		margin-bottom: 1rem;
+	}
 }
 
 h3 {
-  font-size: 0.85rem;
-  font-family: var(--headline-font);
-  margin-bottom: 0;
-  padding-bottom: 0;
+	font-size: 1.2rem;
+	line-height: 0.95em;
+
+	@include mq($from: desktop) {
+		font-size: 1.4rem;
+	}
 }
 
-p {
-  line-height: var(--line-height);
+h5 {
+	font-size: 1rem;
+	font-weight: normal;
+	padding-bottom: 1em;
+	padding-top: 1.5em;
 }
 
-p.intro,
-.intro p,
-.intro {
-  font-size: 1.1rem;
-  padding-bottom: 0;
-  font-weight: normal;
-  line-height: var(--line-height);
+form,
+input,
+select,
+textarea,
+button {
+	font-family: var(--body-font);
+	line-height: 1;
 }
 
-.thumb-intro,
-.small-body {
-  font-size: 0.75rem;
-
-  strong {
-    font-family: var(--headline-font);
-    font-weight: bold !important;
-    font-size: 0.65rem;
-    padding-right: 0.5em;
-  }
-
-  >p {
-    padding: 0;
-  }
+.nav,
+.about h3 {
+	font-size: var(--nav-size);
+	line-height: 1;
 }
 
+.about h3 {
+	margin-bottom: 0.5em;
+}
+
+.nav-hover {
+	@include mq($from: desktop) {
+		&:hover {
+			letter-spacing: var(--letter-space);
+		}
+	}
+}
+
+.nav-small {
+	font-size: calc(var(--nav-size) * 0.8);
+}
+
+p,
+.body,
+ol li,
+button.full,
+h4 {
+	font-size: 1.2rem;
+	line-height: 1.25em;
+	margin-bottom: 0;
+
+	@include mq($from: desktop) {
+		font-size: 1.4rem;
+	}
+}
+
+.light,
+.about p,
+.legal p {
+	font-family: var(--body-font)-light;
+}
+
+.about .nav {
+	line-height: 1.25;
+}
+
+.big p,
+.big {
+	font-size: 1.4rem;
+
+	@include mq($from: desktop) {
+		font-size: 1.6rem;
+	}
+}
+
+.mid,
+.mid p,
+ol li {
+	font-size: 1.2rem;
+}
+
+p.small,
 .small,
 .small p,
-footer,
-footer nav,
-figcaption,
-.caption label {}
-
-nav,
-.mid,
-button,
-.mid input,
-.mid select {
-  font-family: var(--headline-font);
-  font-size: 0.75rem;
+.legal p {
+	font-size: 1rem !important;
 }
 
-strong,
-b {
-  font-weight: bold;
+.very-small {
+	font-size: 0.8rem;
 }
 
-// För Article
-article {
-  ul {
-    padding-left: 1em;
-    list-style-type: square;
+.default-small {
+	font-size: 1rem;
 
-    p:last-of-type {
-      margin-bottom: 0.7em;
-    }
-
-    & li:last-child p {
-      margin-bottom: 1em;
-    }
-  }
-
-  p,
-  .intro,
-  h2,
-  .structured h3,
-  ul {
-    padding-left: var(--outer-margin);
-    padding-right: var(--outer-margin);
-    text-align: left;
-  }
-
-  .structured h3 {
-    padding-bottom: 0.25em;
-  }
-
-  ul p {
-    padding-left: 0;
-  }
-
-  p+h3,
-  ul+h3,
-  ul+h2,
-  p+h2 {
-    padding-top: 1rem;
-  }
-
-  p strong,
-  p b {
-    font-weight: normal !important;
-    font-family: var(--headline-font);
-  }
-
-  p.center {
-    text-align: center;
-  }
+	@include mq($from: desktop) {
+		font-size: 1.4rem;
+	}
 }
 
-button {
-  font-family: var(--headline-font);
+.mid-small {
+	font-size: 1rem;
+
+	@include mq($from: desktop) {
+		font-size: 1.2rem;
+	}
 }
 
-em,
-i {
-  font-style: italic;
+.structured p strong {
+	font-weight: normal;
+	font-family: var(--body-font);
+}
+
+.symbol {
+	font-family: var(--symbol-font);
+}
+
+.page-title {
+	font-size: 1rem;
+	font-family: var(--body-font) !important;
+	@include mq($from: desktop) {
+		padding-top: 0.5rem;
+	}
+}
+
+.small-text {
+	font-size: 1.2rem;
 }
