--- a/app/error.module.scss
+++ b/app/error.module.scss
@@ -9,15 +9,29 @@
 	top: 0;
 	left: 0;
 	z-index: 9999;
-	font-size: 2rem;
+	font-size: 1rem;
 	font-weight: bold;
 	background-color: var(--white);
 
-	.message {
-		font-size: 0.7rem;
-		color: var(--red);
-	}
-	button {
+	h1 {
+		font-size: 1.5rem;
 		margin: 0;
+		margin-bottom: 0.3em;
+	}
+	.message {
+		color: #b51f1f;
+		max-width: 400px;
+		padding: 1rem;
+		font-size: 1rem;
+	}
+	.digest {
+		color: #888888;
+		font-size: 0.7rem;
+	}
+	button,
+	a {
+		all: unset;
+		margin-top: 1rem;
+		font-size: 1rem;
 	}
 }
